fixes modal + pagination safari

--- a/src/Components/Services/SharedHosting/SharedHostingInstructionModal/SharedHostingInstructionModal.module.scss
+++ b/src/Components/Services/SharedHosting/SharedHostingInstructionModal/SharedHostingInstructionModal.module.scss
@@ -55,21 +55,11 @@
 .whoisBlock {
   background: var(forms_bgc_4);
   box-shadow: var(--forms_shadow);
-  padding: 20px 15px;
   margin: 30px 15px;
 
   max-height: 65vh;
   overflow-y: auto;
   overflow-x: hidden;
-
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 130%;
-
-  color: var(--main-text);
-
-  white-space: pre-line;
 
   &::-webkit-scrollbar {
     width: 4px;
@@ -92,7 +82,6 @@
 
   .whoisBlock {
     margin: 25px 25px;
-    padding: 20px 43px;
   }
 
   .modalBlock {
